temprorary change colors for directory so it will fix the contrast

--- a/web/global.css
+++ b/web/global.css
@@ -52,7 +52,7 @@ p {
 
 .directory {
     cursor: pointer;
-    color: #0E548B
+    color: #AD7FA8
 }
 
 .directory:hover {
